# eris

./: .clang_complete  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  CODING-GUIDELINES.md  Makefile.in  OVERVIEW.md  README  README.md  acceptance-speed.R  coding-guidelines.txt  configure  configure.ac  eris.imp  liberis.pc.in
cmake/: CPackConfig.cmake  CPackProjectConfig.cmake.in  RegenPkgConfig.cmake.in
cmake/Modules/: AddGTest.cmake  FindMathJax.cmake
debian/: changelog  control  copyright  eris-doc.install  eris-doc.links  gbp.conf  liberis-dev.install  rules
debian/patches/: 0001-Allow-overriding-MATHJAX_PATH.patch  0001-Replace-std-is_base_of-with-boost-is_base_of.patch  0002-README-proper-debian-packages-no-more-cpack.patch  0002-gcc-4.8-template-std-functions-hack.patch  0003-Eigen-3.2.2-fix-don-t-specify-size-of-null-vector.patch  0003-Use-boost-is_base_of-instead-of-std-is_base_of.patch  series
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml.in
doc/design/: design.dot  market-operation.dot
eris/: Agent.cpp  Agent.hpp  Bundle.cpp  Bundle.hpp  Consumer.cpp  Consumer.hpp  Firm.cpp  Firm.hpp  Good.cpp  Good.hpp  Market.cpp  Market.hpp  Member.cpp  Member.hpp  Optimize.hpp  Position.cpp  Position.hpp  Positional.cpp  Positional.hpp  Random.hpp  SharedMember.hpp  Simulation.cpp  Simulation.hpp  WrappedPositional.cpp  WrappedPositional.hpp  algorithms.cpp  algorithms.hpp  types.hpp  util.hpp
eris/agent/: AssetAgent.hpp  ClearingAgent.hpp
eris/belief/: BayesianLinear.cpp  BayesianLinear.hpp  BayesianLinearRestricted.cpp  BayesianLinearRestricted.hpp  BayesianProbit.cpp  BayesianProbit.hpp
eris/consumer/: CobbDouglas.cpp  CobbDouglas.hpp  Compound.hpp  Polynomial.cpp  Polynomial.hpp  Quadratic.cpp  Quadratic.hpp
eris/eris/: Consumer.cpp  Firm.cpp  Good.cpp
eris/eris/consumer/: Polynomial.cpp
eris/eris/interopt/: Factory.cpp  ProfitStepper.cpp
eris/firm/: PriceFirm.cpp  PriceFirm.hpp  QFirm.cpp
eris/good/: Discrete.hpp
eris/interopt/: Callback.hpp  InterStepper.hpp  PriceStepper.hpp  ProfitStepper.cpp  ProfitStepper.hpp  QFStepper.cpp  QFStepper.hpp
eris/intraopt/: Callback.hpp  FixedIncome.cpp  FixedIncome.hpp  IncrementalBuyer.cpp  IncrementalBuyer.hpp  MUPD.cpp  MUPD.hpp
eris/learning/: BayesianLinear.cpp  BayesianLinear.hpp  BayesianLinearRestricted.cpp  BayesianLinearRestricted.hpp
eris/market/: Bertrand.cpp  Bertrand.hpp  QMarket.cpp  QMarket.hpp
eris/random/: distribution.cpp  distribution.hpp  exponential_distribution.hpp  halfnormal_distribution.hpp  normal_distribution.hpp  rng.cpp  rng.hpp  truncated_distribution.hpp  truncated_normal_distribution.hpp  util.hpp
eris/serialize/: Serialization.cpp  Serialization.hpp  serializer.cpp  serializer.hpp
examples/: CMakeLists.txt  monopoly.cpp  price-monopoly.cpp  quantity-monopoly.cpp
include/eris/: Agent.hpp  Bundle.hpp  Consumer.hpp  Eris.hpp  Firm.hpp  Good.hpp  InterOptimizer.hpp  IntraOptimizer.hpp  Market.hpp  Matrix.hpp  Member.hpp  Optimize.hpp  Optimizer.hpp  Position.hpp  Positional.hpp  Random.hpp  SharedMember.hpp  Simulation.hpp  WrappedPositional.hpp  algorithms.hpp  debug.hpp  noncopyable.hpp  types.hpp  version.hpp.in
scratch/: CMakeLists.txt  bertrand.cpp  bundle-test.cpp  class-cache.cpp  combinations.cpp  decltype-fun.cpp  draw-perf.cpp  five-rnorms.cpp  gibbs-draw-test.cpp  grad-hessian.cpp  lin-dem.cpp  linear-draw-test.cpp  linear-update-test.cpp  many-randoms.cpp  many-rnorms.cpp  many-runifs.cpp  matrix-decomposition-comparisons.cpp  matrix-test.cpp  multimap-for.cpp  probit.cpp  random-bench.cpp  random-cost.cpp  random-csv.cpp  random-hr-ur-crossover.cpp  random-tail-uniform.cpp  random-thresholds.cpp  rmvt.cpp  search.cpp  shared-mem-copy.cpp  some-rnorms.cpp  swap-test.cpp  sync-test.cpp
scratch/eris-symlinks/: README
scratch/eris-symlinks/debian/: changelog  control  eris-symlinks.install  rules
scratch/test/: remove-during-loop.cpp
src/: .gitignore  Agent.cpp  Agent.hpp  Bundle.cpp  Bundle.hpp  Consumer.cpp  Consumer.hpp  Eris.cpp  Eris.hpp  Firm.cpp  Firm.hpp  Good.cpp  Good.hpp  Makefile.am  Makefile.in  Market.cpp  Market.hpp  Member.cpp  Member.hpp  Optimizer.cpp  Position.cpp  Random.cpp  Random.hpp  Simulation.cpp  Simulation.hpp  algorithms.cpp  bundle-test.cpp  grad-hessian.cpp  lin-dem.cpp  test.cpp  types.hpp
src/agent/: PositionalAgent.cpp
src/agent/consumer/: Consumer.cpp  Consumer.hpp  Polynomial.cpp  Polynomial.hpp  Quadratic.cpp  Quadratic.hpp
src/consumer/: CobbDouglas.cpp  Consumer.cpp  Consumer.hpp  Polynomial.cpp  Polynomial.hpp  Quadratic.cpp  Quadratic.hpp
src/eris/: Agent.cpp  Bundle.cpp  Firm.cpp  Good.cpp  Market.cpp  Member.cpp  Position.cpp  Positional.cpp  Random.cpp  Simulation.cpp  WrappedPositional.cpp  WrappedPositional.hpp  algorithms.cpp
src/eris/agent/: AssetAgent.cpp  CircularPosAgent.cpp  PositionalAgent.cpp
src/eris/belief/: BayesianLinear.cpp  BayesianLinearRestricted.cpp
src/eris/consumer/: CobbDouglas.cpp  Polynomial.cpp  Quadratic.cpp
src/eris/firm/: PriceFirm.cpp  QFirm.cpp
src/eris/interopt/: Callback.cpp  FixedIncome.cpp  InterStepper.cpp  PriceStepper.cpp  ProfitStepper.cpp  QFStepper.cpp
src/eris/intraopt/: Callback.cpp  FixedIncome.cpp  IncrementalBuyer.cpp  MUPD.cpp  QMPricer.cpp  WalrasianPricer.cpp
src/eris/market/: Bertrand.cpp  QMarket.cpp
src/eris/matrix/: MatrixImpl.cpp
src/firm/: Firm.hpp  PriceFirm.cpp  PriceFirm.hpp  QFirm.cpp
src/interopt/: FixedIncome.cpp  InterStepper.cpp  PriceStepper.cpp  ProfitStepper.cpp  QFStepper.cpp  QMStepper.cpp  Stepper.cpp
src/intraopt/: IncrementalBuyer.cpp  MUPD.cpp  QMPricer.cpp
src/market/: Bertrand.cpp  Bertrand.hpp  QMarket.cpp  Quantity.cpp
src/optimizer/: IncrementalBuyer.cpp  MUPD.cpp  SimpleBuyer.cpp
test/: macro-op.cpp  object-refs.cpp  set-overload.cpp  shared-weak-ptr.cpp  tostring.cpp
tests/: CMakeLists.txt  bundle-test.cpp  incr-buyer-test.cpp  lock-test.cpp  mupd-test.cpp  pos-agent-test.cpp  sim-setup-test.cpp  simplebuyer.cpp  single-peak-search.cpp  stage-priority.cpp
(+40 files in other folders)
