CXXFLAGS = -std=c++11

bin_PROGRAMS = test lin-dem bundle-test
test_SOURCES = test.cpp Eris.cpp Simulation.cpp Agent.cpp Good.cpp

lin_dem_SOURCES = lin-dem.cpp Eris.cpp Simulation.cpp Agent.cpp Good.cpp consumer/Quadratic.cpp \
				  firm/PriceFirm.cpp

bundle_test_SOURCES = bundle-test.cpp Eris.cpp Simulation.cpp Good.cpp
